# tropical-gemm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  tarpaulin-report.html  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
crates/tropical-gemm/: Cargo.toml
crates/tropical-gemm-core/src/: argmax.rs  gemm.rs  kernel.rs  packing.rs
crates/tropical-gemm-cuda/: Cargo.toml
crates/tropical-gemm-cuda/benches/: tropical_ad_bench.rs
crates/tropical-gemm-cuda/kernels/: tropical_gemm.cu
crates/tropical-gemm-cuda/src/: context.rs  gpu_mat.rs  kernels.rs  lib.rs  memory.rs
crates/tropical-gemm-metal/: Cargo.toml
crates/tropical-gemm-metal/shaders/: tropical_gemm.metal
crates/tropical-gemm-metal/src/: context.rs  error.rs  gpu_mat.rs  kernels.rs  lib.rs
crates/tropical-gemm-python/: Cargo.toml  Makefile  README.md  pyproject.toml
crates/tropical-gemm-python/benchmarks/: benchmark.py
crates/tropical-gemm-python/examples/: mnist_tropical.py  pytorch_tropical.py
crates/tropical-gemm-python/python/tropical_gemm/: __init__.py  jax.py  pytorch.py
crates/tropical-gemm-python/src/: lib.rs
crates/tropical-gemm-python/tests/: test_batched_pytorch.py  test_jax.py  test_julia_reference.py  test_pytorch_gradients.py  test_tropical_gemm.py
crates/tropical-gemm-python/tests/fixtures/: julia_generator.jl
crates/tropical-gemm-simd/src/: detect.rs
crates/tropical-gemm-simd/src/kernels/: avx2.rs
crates/tropical-gemm/examples/: shortest_path.rs
crates/tropical-gemm/src/: api.rs  lib.rs
crates/tropical-gemm/src/core/: argmax.rs  gemm.rs  mod.rs
crates/tropical-gemm/src/mat/: mod.rs  owned.rs
crates/tropical-gemm/src/simd/: mod.rs
crates/tropical-gemm/src/types/: mod.rs
crates/tropical-types/src/: max_plus.rs  min_plus.rs
docs/: book.toml
docs/book/: 404.html  api-reference.html  architecture.html  blis.html  changelog.html  cuda.html  getting-started.html  gpu.html  index.html  installation.html  matrix-api.html  performance.html  print.html  pytorch.html  quick-start.html  searcher-c2a407aa.js  searchindex-4715aa1c.js  searchindex-594eec4b.js  searchindex-d32796dd.js  semirings.html  simd.html  toc-fe721b39.js  toc.html  troubleshooting.html
docs/plans/: 2026-01-28-julia-reference-tests-design.md
docs/src/: SUMMARY.md  api-reference.md  architecture.md  blis.md  changelog.md  cuda.md  getting-started.md  gpu.md  installation.md  introduction.md  jax.md  matrix-api.md  performance.md  pytorch.md  quick-start.md  semirings.md  simd.md  troubleshooting.md
notes/: backward.md
