[package]
name = "tropical-gemm-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Metal backend for tropical matrix multiplication on Apple Silicon"
keywords = ["tropical", "metal", "gpu", "matrix", "gemm", "apple"]
categories = ["algorithms", "mathematics", "science"]
readme = "../../README.md"

[dependencies]
tropical-gemm = { workspace = true }
metal = "0.29"
objc = "0.2"
thiserror = { workspace = true }
once_cell = "1.19"
block = "0.1"

[dev-dependencies]
