[package]
name = "tropical-gemm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-performance tropical matrix multiplication with SIMD and CUDA backends"
keywords = ["tropical", "semiring", "matrix", "gemm", "simd"]
categories = ["algorithms", "mathematics", "science"]
readme = "../../README.md"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
wide = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "gemm_bench"
harness = false
